added luna.jpg and modified index.html
added the picture of Luna and added a small intro paragraph to my main page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Welcome to my blog for CSCI 362!</h1>
+<h3>HW0: Introduction</h3>
+<p> Hello! My name is Seth Hinson and I am a senior here at CofC. I made this blog to track my work during the course of my 362 class. 
+    I enjoy doing many things that involve computers, a few examples of things I do in my free time are: video games, ethical hacking, 
+    building PCs, networking, and working on my personal server.
+    
+    I also have a dog, here's an picture of her.</p>
+<img src="luna.jpg" alt="Luna">
 </body>
 </html>
