resized image in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     building PCs, networking, and working on my personal server.
     
     I also have a dog, here's an picture of her.</p>
-<img src="luna.jpg" alt="Luna">
+<img src="luna.jpg" width="100" height="100" alt="Luna">
 </body>
 </html>
