Updated index.html and index.md
Changed index to format image location and changed answer to 1.3

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <h1 id="welcome-to-my-blog-for-csci-362">Welcome to my blog for CSCI 362!</h1>
 <h3 id="hw0-introduction">HW0: Introduction</h3>
 <p>Hello! My name is Seth Hinson and I am a senior here at CofC. I made this blog to track my work during the course of my 362 class. I enjoy doing many things that involve computers, a few examples of things I do in my free time are: video games, ethical hacking, building PCs, networking, and working on my personal server.</p>
-<p>I also have a dog, here’s an picture of her. <img src="luna.jpg" width="550" height="500" alt="Luna"></p>
+<p>I also have a dog, here’s an picture of her.</p>
+<img src="luna.jpg" width="550" height="500" alt="Luna">
 <h3 id="hw1">HW1:</h3>
 <p>1.3: What are the four important attributes that all professional software should possess? Suggest four other attributes that may sometimes be significant.</p>
 <pre><code>            **The four attributes are: Acceptability, Dependability and security, Efficiency, Maintainability. 
-            Four additional attributes of professional software could be: Aesthetics, Modularity, Well-Documented, Independent (has as few dependencies)** 
+            Four additional attributes of professional software could be: Scalability, Modularity, Well-Documented, Independent (has as few dependencies)** 
 
 1.8:    Discuss whether professional software engineers should be licensed in the same way as doctors or
         lawyers.
